# staff-of-gandalf

./: .gitignore  README.md  pyproject.toml
reports/shire_baselines/: baseline_default.json
staff/: __init__.py  cli.py  config.py  wisdom.py
staff/analysis/: __init__.py  port_wisdom.py  posture.py  threat_assess.py
staff/models/: __init__.py  scan_result.py  shire_models.py
staff/reporting/: __init__.py  council.py
staff/reporting/templates/: counsel.md.j2
staff/scanners/: __init__.py  delve.py  illuminate.py  scry.py  shadowfax.py  shire.py
tests/: __init__.py  test_port_validation.py
