[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staff"
version = "0.2.0"
description = "Staff of the Grey Pilgrim - A Gandalf-themed security assessment CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "The Grey Pilgrim", email = "gandalf@middleearth.me"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
keywords = ["security", "nmap", "penetration-testing", "network-scanner", "cli"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-nmap>=0.7.1",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    "Jinja2>=3.1.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
staff = "staff.cli:app"

[project.urls]
Homepage = "https://github.com/gandalf/staff"
Documentation = "https://github.com/gandalf/staff#readme"
Repository = "https://github.com/gandalf/staff"

[tool.setuptools.packages.find]
where = ["."]
include = ["staff*", "reports*", "tests*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
